--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,21 @@
 /* General Styles */
 body {
-    background-color: #fff4f4;
-    color: #e0e0e0;
+    color: #ffffff;
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     
     cursor: url('/public/images/cursor.png'), auto;
 
-
-    background-position: center; /* Центрирование */
-    background-repeat: no-repeat; /* Без повторений */
-    height: 100vh; /* Минимальная высота на весь экран */
-    background: url('/public/images/background.png') no-repeat center center fixed;
+    /* Упрощаем background */
+    background: #000000 url('/public/images/background.png') no-repeat center center fixed;
     background-size: cover;
 
     display: flex;
     flex-direction: column;
+    height: 100vh; /* Минимальная высота на весь экран */
 }
+
 /* Импорт ретро-шрифта */
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
@@ -185,12 +183,11 @@ nav .logo a {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    background-color: #111; /* Цвет фона, если нужен */
+    background-color: #111;
     text-align: center;
     padding: 10px 0;
+    
 }
 
 
@@ -204,4 +201,54 @@ footer {
 
 
 
+.about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Центрирует по горизонтали */
+    height: 100vh; /* Высота на весь экран */
+    text-align: center; /* Выравнивает текст по центру */
+    color: white; /* Сделает текст белым для лучшей читаемости */
+}
 
+.about-content {
+    background: rgba(0, 0, 0, 0.6); /* Черный фон с прозрачностью */
+    padding: 20px; /* Отступы внутри блока */
+    border-radius: 10px; /* Скругленные углы */
+    max-width: 80%; /* Максимальная ширина блока */
+}
+.content {
+    flex: 1; /* Растягивает контент, заполняя доступное пространство */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding: 20px;
+}
+
+.changelog-container {
+    background: rgba(0, 0, 0, 0.6); /* Полупрозрачный черный фон */
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 80%;
+    width: 100%;
+}
+
+.update, .comment {
+    background: rgba(255, 255, 255, 0.1); /* Легкий фон для каждого блока */
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+html, body {
+    height: 100%; /* Вся высота экрана */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+main {
+    flex: 1; /* Растягивает основное содержимое, чтобы footer ушел вниз */
+}
