--- a/views/about.ejs
+++ b/views/about.ejs
@@ -33,8 +33,10 @@
     <div class="about-container">
         <div class="about-content">
             <h1>About the Game</h1>
-            <p>Welcome to GameMoon! This is an exciting adventure game where you explore the vast universe, fight enemies, and complete quests.</p>
+            <p>Welcome to GameMoon! This is a dedicated page about our game, that isnt already exist! Lets pretend that its here. This project is a Final project for BackEnd in AITU. Made by Ayanat Zhunis, Daniyal Ibrayev, Adilzhan Kurmet from SE-2320 with love!</p>
             <img src="/public/images/game-screenshot.jpg" alt="Game Screenshot">
+            <img src="/public/images/game-screenshot1.jpg" alt="Game Screenshot">
+
         </div>
     </div>
 
