--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
             <% } %>
             <form action="./login" method="POST">
                 <div class="mb-3">
-                    <label for="email" class="form-label">Username</label>
+                    <label for="email" class="form-label">Email</label>
                     <input type="text" id="email" name="email" class="form-control" placeholder="Enter your email" required>
                 </div>
                 
