--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameMoon</title>
     <link rel="stylesheet" href="/public/style.css">
-
-    
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/public/favicon/site.webmanifest">
 </head>
 <body>
     <header>
