--- a/views/changelog.ejs
+++ b/views/changelog.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,7 +48,7 @@
             <form action="/changelog/comment" method="POST">
                 <textarea name="comment" required placeholder="Write your comment..."></textarea>
                 <button type="submit">Post Comment</button>
-            </form>
+            </form> 
         
             <% comments.forEach(comment => { %>
                 <div class="comment">
@@ -64,4 +64,4 @@
         <p>© 2025 GameMoon. All rights reserved.</p>
     </footer>
 </body>
-</html>
+</html> -->
