--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <a href="/about">About</a>
-                <a href="/changelog">Changelog</a>
+                <!-- <a href="/changelog">Changelog</a> -->
                 <a href="/download">Download</a>
                 <a href="/index">News</a>
     
