--- a/views/download.ejs
+++ b/views/download.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <a href="/about">About</a>
-                <a href="/changelog">Changelog</a>
+                <!-- <a href="/changelog">Changelog</a> -->
                 <a href="/download">Download</a>
                 <a href="/index">News</a>
     
@@ -26,6 +26,7 @@
                     <a href="/auth/login">Login</a>
                     <a href="/auth/register">Register</a>
                 <% } %>
+                
             </div>
         </nav>
     </header>
