--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-links">
                 <a href="/about">About</a>
-                <a href="/changelog">Changelog</a>
+                <!-- <a href="/changelog">Changelog</a> -->
                 <a href="/download">Download</a>
                 <a href="/index">News</a>
     
@@ -27,9 +27,32 @@
                     <a href="/auth/login">Login</a>
                     <a href="/auth/register">Register</a>
                 <% } %>
+                
             </div>
         </nav>
     </header>
+    
+
+<!--     
+    <main>
+        <section class="posts-container">
+            <h1>Latest Game Posts</h1>
+            <div class="posts-grid">
+                <% if (posts.length > 0) { %>
+                    <% posts.forEach(post => { %>
+                        <div class="post-card">
+                            <h2><%= post.title %></h2>
+                            <p><%= post.content.substring(0, 150) %>...</p>
+                            <a href="/posts/<%= post._id %>" class="read-more">Read More</a>
+                        </div>
+                    <% }) %>
+                <% } else { %>
+                    <p>No posts available yet.</p>
+                <% } %>
+            </div>
+        </section>
+    </main> -->
+
     
     <main>
         <div class="about-container">
