--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" >
+
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img src="/public/images/logo.png" alt="GamePosts Logo" height="40">
-                    GameMoon
-                </a>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="/"><img src="/public/images/logo.png" alt="GameMoon Logo"></a>
+                <a href="/">GameMoon</a>
             </div>
+
         </nav>
     </header>
     
@@ -43,7 +43,7 @@
         </div>
     </main>
     
-    <footer class="text-center mt-4 py-3 bg-light">
+    <footer>
         <p>© 2025 GameMoon. All rights reserved.</p>
     </footer>
     
