--- a/views/postDetail.ejs
+++ b/views/postDetail.ejs
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-links">
                 <a href="/about">About</a>
-                <a href="/changelog">Changelog</a>
+                <!-- <a href="/changelog">Changelog</a> -->
                 <a href="/download">Download</a>
                 <a href="/index">News</a>
     
@@ -27,6 +27,7 @@
                     <a href="/auth/login">Login</a>
                     <a href="/auth/register">Register</a>
                 <% } %>
+                
             </div>
         </nav>
     </header>
