--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" >
     <link rel="stylesheet" href="/public/style.css">
     <link rel="stylesheet" href="/public/register.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img src="/public/images/logo.png" alt="GamePosts Logo" height="40">
-                    GameMoon
-                </a>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="/"><img src="/public/images/logo.png" alt="GameMoon Logo"></a>
+                <a href="/">GameMoon</a>
             </div>
+
         </nav>
     </header>
     
