--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-links">
                 <a href="/about">About</a>
-                <a href="/changelog">Changelog</a>
+                <!-- <a href="/changelog">Changelog</a> -->
                 <a href="/download">Download</a>
                 <a href="/index">News</a>
     
@@ -27,12 +27,13 @@
                     <a href="/auth/login">Login</a>
                     <a href="/auth/register">Register</a>
                 <% } %>
+                
             </div>
         </nav>
     </header>
     
 
-    
+<!--     
     <main>
         <section class="posts-container">
             <h1>Latest Game Posts</h1>
@@ -50,7 +51,7 @@
                 <% } %>
             </div>
         </section>
-    </main>
+    </main> -->
 
     
     <main>
