--- a/views/download.ejs
+++ b/views/download.ejs
@@ -35,12 +35,14 @@
         <h1>Download GameMoon</h1>
             <p>Choose your platform and download the game.</p>
             <p>Windows</p>
-            <a href="/public/downloads/game-windows.exe" class="btn">Download for Windows</a>
+            <a href="/download-game" class="btn">Download for Windows</a>
             
-            <p>MacOs</p>
-            <a href="/public/downloads/game-mac.dmg" class="btn">Download for macOS</a>
+            <p>MacOS</p>
+            <a href="/download-game" class="btn">Download for macOS</a>
+            
             <p>Linux</p>
-            <a href="/public/downloads/game-linux.tar.gz" class="btn">Download for Linux</a>
+            <a href="/download-game" class="btn">Download for Linux</a>
+            
         </div>
     </div>
 
