--- a/public/style.css
+++ b/public/style.css
@@ -182,13 +182,7 @@ nav .logo a {
     background-color: #e6b800;
 }
 
-footer {
-    width: 100%;
-    background-color: #111;
-    text-align: center;
-    padding: 10px 0;
-    
-}
+
 
 
 .navbar {
@@ -220,19 +214,19 @@ footer {
 .about-container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Центрирует по горизонтали */
-    height: 100vh; /* Высота на весь экран */
-    text-align: center; /* Выравнивает текст по центру */
-    color: white; /* Сделает текст белым для лучшей читаемости */
+    align-items: center;
+    text-align: center;
+    color: white;
+    flex: 1; /* Позволяет контейнеру занимать все доступное пространство */
+    justify-content: center; /* Центрирует содержимое по вертикали */
 }
 
 .about-content {
-    background: rgba(0, 0, 0, 0.6); /* Черный фон с прозрачностью */
-    padding: 20px; /* Отступы внутри блока */
-
-    max-width: 80%; /* Максимальная ширина блока */
-    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    max-width: 80%;
 }
+
 .content {
     flex: 1; /* Растягивает контент, заполняя доступное пространство */
     display: flex;
@@ -260,7 +254,7 @@ footer {
     border-radius: 5px;
 }
 html, body {
-    height: 100%; /* Вся высота экрана */
+    height: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -346,4 +340,12 @@ main {
 
 .register-link a {
     color: #ff9800;
+}
+footer {
+    background: #111;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    margin-top: auto; /* Футер всегда прижат к низу */
 }
