--- a/views/download.ejs
+++ b/views/download.ejs
@@ -30,8 +30,8 @@
             </div>
         </nav>
     </header>
-    <div class="about-container">
-        <div class="about-content">
+    <div class="bout-container">
+        <div class="bout-content">
         <h1>Download GameMoon</h1>
             <p>Choose your platform and download the game.</p>
             <p>Windows</p>
