--- a/views/download-game.ejs
+++ b/views/download-game.ejs
@@ -16,8 +16,8 @@
         </nav>
     </header>
     
-    <div class="about-container">
-        <div class="about-content">
+    <div class="bout-container">
+        <div class="bout-content">
             <h1>Sorry,game isnt ready yet</h1>
             <p>If you are not so smart, thats just a backend project</p>
             <a href="/" class="btn">Get out</a>
